# rust-app-template

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
config/: default.toml
src/: config.rs  error.rs  lib.rs  main.rs
